[package]
name = "screeps-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
serde_json = "1.0"

log = "0.4"
anyhow = "1.0"
smallvec = { version = "1.8.0", features = ["const_generics", "const_new", "may_dangle", "union"] }
ahash = "0.7.6"

fern = { version = "0.6.0", optional = true }

[features]
fern-logger = ["fern"]
rust_string = []
